Change text selection iterator behaviour for non-editable empty selection

When the iterator that supports Image selection in editable fields is used
in cases where there is empty selection, it still returns some non-empty
character and hence makes a selection at empty areas too. Following commit:
https://codereview.chromium.org/1845193002/ is causing this behaviour.
So, in-order to maintain both use-cases, change iterator behavior to as it
was previously for non-editable cases.

BUG=623906

Review-Url: https://codereview.chromium.org/2104883002
Cr-Commit-Position: refs/heads/master@{#402771}

Former-commit-id: 6e099723055362705266d6d4c70d4fdaa4c071c6